<resources>
    <string name="app_name">Hire Code</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet.</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password_confirmation">Enter password confirmation</string>
    <string name="phone_number">Phone number</string>
    <string name="to_login_activity">To Login Activity</string>
    <string name="to_register_engineer_activity">To Register Engineer Activity</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="login_here">Login Here</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="company">Company</string>
    <string name="enter_your_position">Enter your position</string>
    <string name="position">Position</string>
    <string name="to_register_company_activity">to register company activity</string>
    <string name="reset_password">Reset Password</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a euismod leo</string>
    <string name="lorem_long2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a euismod leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a euismod leo.</string>
    <string name="send_to_reset_password">Reset Password</string>
    <string name="to_reset_password_activity">to reset password activity</string>
    <string name="find_talented_and_best_developers_in_various_fields_of_expertise">Find talented and best developers in various fields of expertise</string>
    <string name="login_as_engineer">Login as Engineer</string>
    <string name="or">or</string>
    <string name="login_as_company">Login as Company</string>
    <string name="to_onboard_activity">to onboard activity</string>
    <string name="louis_tomlinson">Louis Tomlinson</string>
    <string name="web_developer">Web Developer</string>
    <string name="purwekerto_jawa_tengah">Purwekerto, Jawa Tengah</string>
    <string name="talent">Talent</string>
    <string name="to_profile_engineer">to profile engineer</string>
    <string name="to_profile_company">to profile company</string>
    <string name="enter_a_new_password_confirmation">Enter a new password confirmation</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New password</string>
    <string name="send_password_reset_to_email">Send password reset to email</string>
</resources>