<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="#F6F7F8"
        tools:context=".temporary.LoginCompanyActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:src="@drawable/logohorizontalnew"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Login Company"
            android:textSize="40sp"
            android:textColor="@color/navy"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_desc"
            android:text="@string/lorem_ipsum_dolor_sit_amet"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            app:layout_constraintLeft_toLeftOf="@id/et_email"
            android:layout_marginTop="50dp"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_email"
            android:hint="@string/enter_email_address"
            android:textColorHint="@color/navy"
            android:textColor="@color/navy"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tv_password"
            android:text="@string/password"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintLeft_toLeftOf="@id/et_password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColorHint="@color/navy"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#fff"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"

            />

        <TextView
            android:id="@+id/tv_forgotpw"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="#1F2A36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#fff"
            android:background="@drawable/radiusbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotpw"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#1F2A36"
            app:layout_constraintLeft_toLeftOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginEnd="100dp"
            />

        <TextView
            android:id="@+id/tv_register"
            android:text="@string/register_here"
            android:textColor="@color/pinkPasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_no_account"
            app:layout_constraintLeft_toRightOf="@id/tv_no_account"
            android:layout_marginStart="5dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>