<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reset_password.InputNewPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:src="@drawable/logohorizontalnew"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset_password"
            android:textSize="40sp"
            android:textColor="@color/navy"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_desc"
            android:text="@string/lorem_long"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_new_password"
            android:text="@string/new_password"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            app:layout_constraintLeft_toLeftOf="@id/et_new_password"
            android:layout_marginTop="50dp"
            android:layout_marginStart="5dp"
            />

        <EditText
            android:id="@+id/et_new_password"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/navy"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_new_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="#fff"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tv_confirm_new_password"
            android:text="@string/confirm_new_password"
            android:textColor="@color/navy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password"
            app:layout_constraintLeft_toLeftOf="@id/et_new_password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            />

        <EditText
            android:id="@+id/et_confirm_new_password"
            android:hint="@string/enter_a_new_password_confirmation"
            android:inputType="textPassword"
            android:textColorHint="@color/navy"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_new_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="#fff"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/btn_reset_password"
            android:background="@drawable/radiusbutton"
            android:text="@string/send_to_reset_password"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_new_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="80dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>